# NetMigrate

./: README.md  doc.md
cpp/: .gitmodules
cpp/YCSB-client/: .gitignore  Makefile  README.md
cpp/YCSB-client/Fulva/: kv_migration.properties  kv_migration_1.properties  kv_migration_db.cc  kv_migration_db.h
cpp/YCSB-client/Rocksteady/: kv_migration_db.cc  kv_migration_db.h  load.properties  run.properties  run_1.properties
cpp/YCSB-client/Source/: kv_migration_db.cc  kv_migration_db.h  run.properties
cpp/YCSB-client/core/: basic_db.cc  basic_db.h  client.h  core_workload.cc  core_workload.h  db.h  db_wrapper.h  measurements.cc  measurements.h  ycsbc.cc
cpp/YCSB-client/kv_migration/: kv_migration.properties  kv_migration_db.cc  kv_migration_db.h
cpp/YCSB-client/redis/: redis.properties  redis_cc.h  redis_db.cc
cpp/YCSB-client/workloads/: workload10  workload20  workload30  workloada  workloadb  workloadc  workloadd  workloade  workloadf
cpp/server/: .gitignore
cpp/server/Fulva/: .gitignore  CMakeLists.txt  README.md  run_dst.sh  run_src_pull.sh  run_src_push.sh
cpp/server/Fulva/src/: DestinationMigrationManager.cpp  SourceMigrationManager.cpp  main.cpp
cpp/server/Fulva/src/include/: MigrationManager.h  redis_agent.h  rpc.h
cpp/server/NetMigrate/: CMakeLists.txt  README.md  run_dst.sh  run_src_pull.sh  run_src_push.sh
cpp/server/NetMigrate/src/: DestinationMigrationManager.cpp  SourceMigrationManager.cpp  crc64.cpp  main.cpp
cpp/server/NetMigrate/src/include/: MigrationManager.h  redis_agent.h
cpp/server/Rocksteady/: CMakeLists.txt  README.md  run_dst.sh  run_src_pull.sh  run_src_push.sh
cpp/server/Rocksteady/protos/: keyvaluestore.proto
cpp/server/Rocksteady/src/: DestinationMigrationManager.cpp  SourceMigrationManager.cpp  main.cpp
cpp/server/Rocksteady/src/include/: MigrationManager.h  redis_agent.h
cpp/server/ServerAgents/: README.md
cpp/server/ServerAgents/server-agent/: .gitignore  Makefile  start_dst_server_agent.sh  start_src_server_agent.sh
cpp/server/ServerAgents/server-agent/src/: main.cpp  redis_agent.cpp  server_agent.cpp
cpp/server/ServerAgents/server-agent/src/include/: redis_agent.h  server_agent.h
cpp/server/Source-protocol/: destination_migr.sh  source_migr.sh
cpp/server/Source-protocol/migration_agent_udp/: CMakeLists.txt  redis_dst.conf  redis_src.conf
cpp/server/Source-protocol/migration_agent_udp/src/: DestinationMigrationManager.cpp  SourceMigrationManager.cpp  UDP_file_transfer.cpp  crcspeed.cpp  helper_func.cpp  main.cpp  test.cpp
cpp/server/Source-protocol/migration_agent_udp/src/include/: MigrationManager.h  UDP_file_transfer.h  redis_agent.h
cpp/server/Source-protocol/server_agent/: .gitignore  Makefile  start_dst_server_agent.sh  start_dst_server_agent_4.sh  start_src_server_agent.sh  start_src_server_agent_1.sh  start_src_server_agent_4.sh
cpp/server/Source-protocol/server_agent/src/: main.cpp  redis_agent.cpp  server_agent.cpp
cpp/server/Source-protocol/server_agent/src/include/: redis_agent.h  server_agent.h
cpp/utils/: constants.h  pkt_headers.h  socket.cpp  socket.h
experiment_steps/: Fulva.md  NetMigrate.md  Rocksteady.md  Source.md
experiment_steps/figures/: draw.py  example_time.json  netmigrate-b-100.txt
tna_kv_migration/: README.md
tna_kv_migration/migration/: defines.p4  headers.p4  kv_migration.p4  parsers.p4  routing.p4
tna_kv_migration/migration/controller/: .gitignore  common.py  control.py  kv_controller.py  kv_migration.py  port.cmd  ports.py  ports.yaml  routing.py  thriftutils.py
